--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: inherit; 
+  text-decoration: none;
 }
 a:hover {
   color: #535bf2;
@@ -33,6 +33,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+p {
+  color: rgba(255, 255, 255, 0.75);
 }
 
 button {
@@ -52,6 +56,13 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+ul {
+  padding: 0;
+}
+li {
+  list-style-type: none;
 }
 
 @media (prefers-color-scheme: light) {
